# cli-patterns

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  docker-compose.ci.yml  mypy.ini  pyproject.toml
.claude/commands/implement/: README.md  tdd-implement.md
.claude/commands/plan/: refine-issue.md
.claude/commands/review/: pr-review.md
.docker/: ci-entrypoint.sh
.github/: AUTH_SETUP.md  CI_README.md  README.md
.github/actions/setup/: action.yml
.github/workflows/: ci.yml  sync-check.yml
.github/workflows/pattern-stack/setup/: action.yml
.tp/: config.json
cli-patterns-docs/: MVP-COMPLETION-PLAN.md  MVP-TICKETS.md  PRD.md  README.md
cli-patterns-docs/adrs/: ADR-001-stateless-execution.md  ADR-002-hybrid-definitions.md  ADR-003-subprocess-execution.md  ADR-004-branch-ui-protocol.md  ADR-005-type-system.md  ADR-006-interactive-terminal-ui.md  ADR-007-composable-parser-system.md  ADR-008-wizard-type-system-architecture.md
cli-patterns-docs/future-work/: CLI-4-follow-up-issues.md
cli-patterns-docs/refinements/: CLI-8-refinement-summary.md
cli-patterns-docs/security/: security-enhancements-implementation-guide.md
cli-patterns-docs/session-logs/: 001-context-gathering.md  002-synthesis-refinement.md  003-execution-planning.md
config/themes/: dark.yaml  light.yaml
docs/: semantic-types.md
examples/: subprocess_demo.py  subprocess_test.py
src/cli_patterns/: .cli_patterns_history  __init__.py  cli.py
src/cli_patterns/config/: __init__.py  theme_loader.py
src/cli_patterns/core/: __init__.py  config.py  models.py  parser_types.py  protocols.py  types.py  validators.py
src/cli_patterns/execution/: __init__.py  subprocess_executor.py
src/cli_patterns/ui/: __init__.py  rich_adapter.py  shell.py
src/cli_patterns/ui/design/: __init__.py  boxes.py  components.py  icons.py  registry.py  themes.py  tokens.py
src/cli_patterns/ui/parser/: __init__.py  error_formatter.py  parsers.py  pipeline.py  protocols.py  registry.py  semantic_context.py  semantic_errors.py  semantic_parser.py  semantic_pipeline.py  semantic_registry.py  semantic_result.py  types.py
src/cli_patterns/ui/screens/: __init__.py  welcome.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_design_system.py  test_error_formatting_integration.py  test_parser_type_flow.py  test_shell_parser_integration.py  test_subprocess_executor.py  test_subprocess_security.py
tests/unit/: __init__.py
tests/unit/core/: test_command_injection.py  test_models.py  test_parser_types.py  test_protocols.py  test_security.py  test_types.py  test_validators.py
tests/unit/execution/: __init__.py  test_subprocess_executor.py
tests/unit/ui/design/: __init__.py  test_components.py  test_error_display.py  test_themes.py  test_tokens.py
tests/unit/ui/parser/: test_error_formatter.py  test_pipeline.py  test_protocols.py  test_registry.py  test_semantic_types.py  test_shell_parser.py  test_text_parser.py  test_types.py
